package package_1;

class Customer {
    private String name;

    public Customer(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

	public void setName(String newName) {
		// TODO Auto-generated method stub
		
	}
}

